--- a/vignettes/lineEnding.html
+++ b/vignettes/lineEnding.html
@@ -214,7 +214,7 @@ as modified. </p>
 <p>I came to face this issue when dealing with version control on Subversion and 
 couldn&#39;t help but develop this short code snippet in order for my collaborators 
 to track my changes. GitHub seemingly offers a built-in option to manipulate 
-<a href="https://help.github.com/articles/dealing-with-line-endings/">global settings for line endings</a>, 
+<a href="https://docs.github.com/articles/dealing-with-line-endings/">global settings for line endings</a>, 
 but I haven&#39;t tried this so far. Anyway, my manual approach goes by the name 
 <code>lineEnding</code> and requires </p>
 
