fixes another broken link (#7)

--- a/vignettes/lineEnding.html
+++ b/vignettes/lineEnding.html
@@ -232,7 +232,7 @@ easily be installed on Linux via </p>
 <pre><code class="bash">sudo apt-get install dos2unix
 </code></pre>
 
-<p>or downloaded directly from the <a href="http://dos2unix.sourceforge.net/">project website</a> 
+<p>or downloaded directly from the <a href="https://dos2unix.sourceforge.io/">project website</a> 
 for any other OS. Once everything is set up, try the following brief example to 
 clarify what I was trying to explain and demonstrate the usefulness of 
 <code>lineEnding</code>:</p>
